# whisper_testing

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cross-platform  Pipfile  README-cross-platform.md  README.md  Whisper_testing.ipynb  count_speakers_in_audio.py  debug.sh  docker-compose.cross-platform.yml  docker-compose.yml  download_models.py  download_whisper_models.py  entrypoint.py  entrypoint.sh  gitignore  google_colab_whisper_testing.ipynb  preprocess_audio.sh  requirements.txt  run_dynamic_cpu.sh  run_transcription.sh  setup.sh  transcribe_diarize.py  transcribe_diarize_sciserver.ipynb
cpp_version/: CMakeLists.txt  README.md  append_benchmark.sh  benchmark_verify.cpp  direct_fix.sh  fix_benchmark.sh  models  reset_benchmark.sh  setup.sh  setup_cpp.sh  test_benchmark_direct.cpp
cpp_version/examples/: run_example.sh
cpp_version/include/: benchmark.h  whisper_diarize.h  whisper_diarize.hpp
cpp_version/src/: benchmark.cpp  benchmark_cleanup.cpp  benchmark_debug.h  cleanup_benchmarks.cpp  main.cpp  manage_benchmarks.cpp  test_benchmark.cpp  whisper_diarize.cpp
data/: whisper_benchmarks.csv
